# ai-assistant

./: .gitignore  README.md  main.py  pyproject.toml
voice_assistant/: __init__.py  audio.py  conversation.py  llm.py  pipeline.py  server.py  stt.py  tts.py  vad.py
voice_assistant/core/: pipeline.py  session.py
voice_assistant/io/: playback.py  ui.py
